fixed nav bar to top of page and added to padding to body to prevent overlap

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,6 +15,7 @@ html {
  */
 
 body {
+  padding-top: 120px; 
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
