--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,8 +3,11 @@ nav {
   font-family: 'Bungee', sans-serif;
   background-color: #4056A1;
   color: #FFFFFF;
-  max-height: 120px;
+  height: 120px;
   padding: 1.5em;
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
